Mudança no tipo da query, inclusão de novos parâmetros e classes para implementação de filtros
